# md-url-check

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/: build.yml  dependabot.yml
.github/workflows/: build.yml
md_url_check/: __init__.py  __main__.py
tests/: conftest.py  test_core.py  test_url_check.py
